src/test/helm-output/smilecdr/ingress-aws-alb/values.yaml
ingress:
  enabled: true
  type: aws-lbc-alb

# This defines the minimum required settings to use this Helm Chart.
database:
  crunchypgo:
    enabled: true

image:
  credentials:
    type: values
